tests/compile_fail/conflicting_inverse.stderr
error: `no_short and no_long` is incompatible with `inverse_arg`.
 --> $DIR/conflicting_inverse.rs:9:9
  |
9 |     pub value: bool,
  |         ^^^^^
